tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_zsh.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
zsh:365: command not found: compdef
✅ [32mAlready on [1m[32mmain[0m, nothing to merge[0m
