tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_create_zsh.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
zsh:365: command not found: compdef
✅ [32mCreated new worktree for [1m[32mfeature[0m at [TMPDIR]/test-repo.feature[0m
